--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body {
-    align-items: center;
-    margin:0
+    display: block;
+    text-align: center;
+    margin:0;
+    
 }
 img {
     border: 1px dashed red;
-    width: 80%;
+    
+    text-align: center;
 }
